@@ -4,6 +4,8 @@ Grok changes
 4.0 (unreleased)
 ================
 
+* Update import paths for lifecycle events.
+
 * Drop support for Python 2.7, 3.5, 3.6.
 
 * Add support for Python 3.11.
